macro_utilities/stringify_attr/src/tests/derive/raw_missing_raw.stderr
error: Missing attribute: raw
  --> $DIR/raw_missing_raw.rs:20:11
   |
20 |         #[stringify_raw(path = "a", in(rename(A)))]
   |           ^^^^^^^^^^^^^
